mask does not update correctly when changing frames #64595

Closed
opened 2019-05-14 13:09:28 +02:00 by Yousef Harfoush · 7 comments

System Information
Operating system: windows 10 x64
Graphics card: intel hd4600

Blender Version
Broken: (version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-12 22:25, hash: 05f1451d72, type: Release)
Worked: (2.79)

Short description of error
when changing frames the mask animated points does not move correctly every time, sometimes it works other dont!
please see attached video:
0001-0005.mp4

Exact steps for others to reproduce the error
add any mask
make animation on it
go back and forth with KB left arrow and wright

**System Information** Operating system: windows 10 x64 Graphics card: intel hd4600 **Blender Version** Broken: (version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-12 22:25, hash: 05f1451d7248, type: Release) Worked: (2.79) **Short description of error** when changing frames the mask animated points does not move correctly every time, sometimes it works other dont! please see attached video: [0001-0005.mp4](https://archive.blender.org/developer/F7036155/0001-0005.mp4) **Exact steps for others to reproduce the error** add any mask make animation on it go back and forth with KB left arrow and wright
Author
Member

Added subscriber: @bat3a

Added subscriber: @bat3a

#64504 was marked as duplicate of this issue

#64504 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2019-05-14 15:26:38 +02:00
Member

Can confirm this is not updating correctly if you go back and forth.

Can confirm this is not updating correctly if you go back and forth.
Member

Added subscriber: @DanteLeoncini

Added subscriber: @DanteLeoncini

This issue was referenced by fa9ab7b5a9

This issue was referenced by fa9ab7b5a9a52155f9dd43809bd4e44c937054e4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64595
No description provided.