Fix T64595: Mask does not update correctly when changing frames

Is caused by change which made all IDs to have parameters.

Solved by using more explicit relations.